--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,12 @@
     <string name="app_name">PopularMovies</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_detail">DetailActivity</string>
+    <string name="film_name">Film Title</string>
+    <string name="popular">Popular</string>
+    <string name="rate">Rate</string>
+    <string name="date">Date</string>
+    <string name="time">Time</string>
+    <string name="vote">Vote Average</string>
+    <string name="btn_vote">Mark as Favourite</string>
 </resources>
