--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,19 @@
 <resources>
-    <string name="app_name">PopularMovies</string>
-    <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
-    <string name="title_activity_detail">DetailActivity</string>
-    <string name="film_name">Film Title</string>
-    <string name="popular">Popular</string>
-    <string name="rate">Rate</string>
-    <string name="date">Date</string>
-    <string name="time">Time</string>
-    <string name="vote">Vote Average</string>
-    <string name="btn_vote">Mark as Favourite</string>
+    <string name="app_name">Popular Movies</string>
+    <string name="action_sort_by">Sort by</string>
+    <string name="action_sort_by_popularity">Most Popular</string>
+    <string name="action_sort_by_rating">Highest Rated</string>
+    <string name="title_activity_detail">Movie Details</string>
+    <string name="rating">Rating</string>
+    <string name="release_date">Released</string>
+    <string name="details">Details</string>
+    <string name="trailers">Trailers</string>
+    <string name="reviews">Reviews</string>
+    <string name="action_favorite">Favorite</string>
+    <string name="content_authority">com.example.android.popularmovies</string>
+    <string name="removed_from_favorites">Removed from Favorites</string>
+    <string name="added_to_favorites">Added to Favorites</string>
+    <string name="action_sort_by_favorite">Favorites</string>
+    <string name="action_share">Share</string>
+    <string name="tmdb_api_key">put your key here</string>
 </resources>
